fix(*): Resolve a variety of small and simple bugs
Summary:
Fix T1822 - saving templates not working, not showing template

Fix T1800 - give composers a minimum size

Fix the bottom bar of the composer so the gray bar goes all the way across in popout mode.

Fix T1825 - switch to a more attractive "June 4, 2015 at 3:10 PM" styling for expanded dates

Remove, rather than hide, react components for text fields in composer. Fixes T1147

Fix specs

Switch to 999+ instead of infinity. Fixes T1768

Fix broken TemplateStore specs

Test Plan: Run tests

Reviewers: evan

Reviewed By: evan

Maniphest Tasks: T1147, T1768, T1822, T1800, T1825

Differential Revision: https://phab.nylas.com/D1601

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -28,15 +28,15 @@
     width: 100%;
     background: transparent;
     border-bottom: 0;
-    max-width: @compose-width;
-    margin: 0 auto;
 
     .composer-action-bar-content {
       display:flex;
+      margin: 0 auto;
       flex-direction:row;
-      margin-left: -@spacing-standard / 2;
-      margin-right: -@spacing-standard / 2;
-      padding: @spacing-standard @spacing-double;
+      max-width: @compose-width;
+      padding-left: @spacing-standard + @spacing-standard / 2;
+      padding-right: @spacing-standard + @spacing-standard / 2;
+      padding-top: @spacing-standard;
       padding-bottom: @spacing-standard*1.1;
 
       > * {
@@ -109,7 +109,7 @@
     margin: 0 @spacing-standard;
     border-bottom: 1px solid @border-color-divider;
     flex-shrink:0;
-    
+
     .subject-label {
       color: @text-color-very-subtle;
       float: left;
